--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <option value="all">All Cuisines</option>
         </select>
       </div>
-      <ul id="restaurants-list"></ul>
+      <ul id="restaurants-list" class="flex-container"></ul>
     </section>
   </main>
 
