--- a/restaurant.html
+++ b/restaurant.html
@@ -4,6 +4,8 @@
 <head>
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <!-- Main CSS file -->
   <link rel="stylesheet" href="css/styles.css" type="text/css">
   <title>Restaurant Info</title>
@@ -42,7 +44,7 @@
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
-    <section id="reviews-container">
+    <section id="reviews-container" class="flex-container">
       <ul id="reviews-list"></ul>
     </section>
     <!-- End reviews -->
@@ -61,7 +63,7 @@
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
   <!-- Google Maps -->
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_tKbW6A5pQ-eupxI56myUnHLqYCzOjKo&libraries=places&callback=initMap"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbwYJRFofOWsrzthiQSsx8wyL5JxK7Jyc&libraries=places&callback=initMap"></script>
   <!-- End scripts -->
 
 </body>
