--- a/restaurant.html
+++ b/restaurant.html
@@ -30,8 +30,8 @@
   <!-- Beginning main -->
   <main id="maincontent">
     <!-- Beginning map -->
-    <section id="map-container">
-      <div id="map"></div>
+    <section id="map-container" tabindex=-1>
+      <div id="map" aria-describedby="restaurant-address" tabindex="-1"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
