--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
   </header>
 
   <main id="maincontent">
-    <section id="map-container" tabindex=-1>
-      <div id="map" tabindex="-1"></div>
+    <div id="skip-containter">
+    <a id="skip-link" href="#neighborhoods-select" aria-label="skip google map to main content">
+      Skip google map
+    </a>
+  </div>
+    <section id="map-container" tabindex=-1 aria-hidden="true">
+      <div id="map" role="application" tabindex="-1"></div>
     </section>
     <section>
       <div class="filter-options">
