toggle fav html and css

--- a/restaurant.html
+++ b/restaurant.html
@@ -10,7 +10,7 @@
 
 
   <!-- Main CSS file -->
-  <link rel="stylesheet" href="dist/styles.css" type="text/css">
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
   <title>Restaurant Info</title>
 </head>
 
