--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="theme-color" content="#3397DB">
   <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-  <link rel="stylesheet" href="dist/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
+
   <title>Restaurant Reviews</title>
 </head>
 
