--- a/restaurant.html
+++ b/restaurant.html
@@ -87,7 +87,7 @@
     <label for="r-comments">Comments:</label><br/>
     <textarea id="r-comments"name="comments" rows="5"></textarea>
     <br/>
-    <button id="btn-submit">Submit</button>
+    <button id="btn-submit" onclick="submitModal()">Submit</button>
   </div>
 
 </div>
@@ -105,6 +105,7 @@
   <script type="application/javascript" charset="utf-8" src="js/idb.js"></script>
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
+  <script type="text/javascript" src="js/sync.js"></script>
   <script type="text/javascript" src="js/restaurant_info.js"></script>
    <!-- Google Maps -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbwYJRFofOWsrzthiQSsx8wyL5JxK7Jyc&libraries=places&callback=initMap"></script>
