form fields validation

--- a/restaurant.html
+++ b/restaurant.html
@@ -71,6 +71,7 @@
   <div id="modal-content" class="imodal">
     <span class="close" onclick="closeModal()">&times;</span>
     <h2> Submit Review </h2>
+    <label id="error"> Form missing one or more elements! </label> <br/>
     <label for="r-name" >Name: </label>
     <input type="text" id="r-name" name="firstname"/>
     <br/><br/>
