--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
   </main>
 
   <script type="application/javascript" charset="utf-8" src="js/idb.js"></script>
+
+  <script type="application/javascript" charset="utf-8" src="js/lazyload.min.js"></script>
+
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="text/javascript" src="js/sync.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
