add verlock's credits

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
   <script type="application/javascript" charset="utf-8" src="js/idb.js"></script>
 
+  <!--using verlock's lazyload library-->
   <script type="application/javascript" charset="utf-8" src="js/lazyload.min.js"></script>
-
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="text/javascript" src="js/sync.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
