--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#3397DB">
   <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="dist/css/styles.css">
 
   <title>Restaurant Reviews</title>
 </head>
@@ -52,9 +52,9 @@
 
   <!--using verlock's lazyload library-->
   <script type="application/javascript" charset="utf-8" src="js/lazyload.min.js"></script>
-  <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
+  <script type="application/javascript" charset="utf-8" src="js/dbhelper-min.js"></script>
   <script type="text/javascript" src="js/sync.js"></script>
-  <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
+  <script type="application/javascript" charset="utf-8" src="js/main-min.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbwYJRFofOWsrzthiQSsx8wyL5JxK7Jyc&libraries=places&callback=initMap"></script>
 
 
