--- a/restaurant.html
+++ b/restaurant.html
@@ -10,7 +10,7 @@
 
 
   <!-- Main CSS file -->
-  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <link rel="stylesheet" href="dist/css/styles.css" type="text/css">
   <title>Restaurant Info</title>
 </head>
 
@@ -116,10 +116,10 @@
   }
 </script>
   <script type="application/javascript" charset="utf-8" src="js/idb.js"></script>
-  <script type="text/javascript" src="js/dbhelper.js"></script>
+  <script type="text/javascript" src="js/dbhelper-min.js"></script>
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/sync.js"></script>
-  <script type="text/javascript" src="js/restaurant_info.js"></script>
+  <script type="text/javascript" src="js/restaurant_info-min.js"></script>
    <!-- Google Maps -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbwYJRFofOWsrzthiQSsx8wyL5JxK7Jyc&libraries=places&callback=initMap"></script>
 
